# fish_sup

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  build_both.sh
.github/workflows/: build.yml  release.yml
docs/: algorithm.md  build_linux.md  build_windows.md  cli.md  numerics.md
examples/: reference_2x3.md
scripts/: run_reference_case.ps1  run_reference_case.sh
src/: combinatorics.h  enumeration.h  event.h  event_collection.h  event_logic.h  logsumexp.h  main.cpp  minlike.h  probability.h  real.h  table_collection.h  table_record.h  two_by_c.h  types.h
